--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -552,9 +552,9 @@
     <string name="bet_info_bet_quota">投注额</string>
     <string name="bet_info_win_quota">可赢额</string>
     <string name="bet_info_odd_content_changed">一个或多个选项的赔率，让球数或比分已更改</string>
-    <string name="bet_info_odd_content_changed2">赔率已变更，从 %1$s 至 %2$s 。</string>
+    <string name="bet_info_odd_content_changed2">球线或赔率已变更</string>
     <string name="bet_list_single_warn">可用相同的投注额填充所有单项选择</string>
-    <string name="bet_list_single">单注</string>
+    <string name="bet_list_single">单场</string>
     <string name="bet_list_single_type">单项投注</string>
     <string name="bet_list_parlay_type">串关投注</string>
     <string name="bet_list_view_more_options">更多投注选项</string>
