--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1327,5 +1327,6 @@
     </string>
     <string name="action_settings">Settings</string>
     <string name="register_and_login">注册/登录</string>
+    <string name="live_streaming">直播</string>
 
 </resources>
