--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -324,7 +324,7 @@
     <string name="end_date">结束日期</string>
     <string name="no_data">没有更多数据了</string>
     <string name="uncheck">未确认</string>
-    <string name="undone">进行中</string>
+    <string name="undone">投注成功</string>
     <string name="settled">已结算</string>
     <string name="win">赢</string>
     <string name="win_half">赢半</string>
@@ -332,7 +332,7 @@
     <string name="lose_half">输半</string>
     <string name="draw">和</string>
     <string name="canceled">已取消</string>
-    <string name="odds_change">赔率已改变</string>
+    <string name="odds_change">投注失败,请稍后再试</string>
     <string name="pending">待成立 %1$s 秒</string>
     <string name="confirmed">已确认</string>
     <string name="bet_detail">注单详情</string>
