[feature] 注單紀錄  1. 主要背景UI調整  2. 調整體育分類UI  3. 加入未結算注單api呼叫邏輯 (UI待調整)

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -337,6 +337,7 @@
     <string name="no_data">No more data to display</string>
     <string name="uncheck">Unconfirmed</string>
     <string name="undone">Running</string>
+    <string name="not_settled">Unsettled</string>
     <string name="settled">Settled bets</string>
     <string name="win">Win</string>
     <string name="win_half">Win a half</string>
