1.建议反馈-问题与建议,反馈记录功能完成 2.历史记录功能80%完成后续UI修改 3.常见问题完成

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -262,7 +262,7 @@
     <string name="news_center">消息中心</string>
     <string name="help_center">帮助中心</string>
     <string name="fund_detail">资金明细</string>
-    <string name="feedback">建议反馈</string>
+    <string name="feedback">意见反馈</string>
     <string name="promotion">优惠活动</string>
     <string name="need_improve">需完善</string>
     <string name="profile_info">个人资讯</string>
