--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -690,7 +690,7 @@
     <string name="win_lose_mark">赢 / 输：</string>
     <string name="all_sport">所有体育</string>
     <string name="back_to_top">回到顶部</string>
-    <string name="total">总共</string>
+    <string name="total">总计</string>
     <string name="verse">v</string>
     <string name="keyboard_max">最大</string>
     <string name="odds_button_name_first">第一</string>
@@ -874,7 +874,7 @@
     <string name="verify_failed">(验证失败)</string>
     <string name="select_id_type">选择身份证件类型</string>
     <string name="scan_tool_bar">扫描结果</string>
-    <string name="text_us_east_time">以美东(UTC-4)时间计算</string>
+    <string name="text_us_east_time">以美东（UTC-4）时间计算</string>
     <string name="text_cant_play">发生错误,请稍后再试。</string>
     <string name="text_bet_not_success">滚球投注注单状态&#160;</string>
     <string name="text_bet_not_success3">&#160;您的注单正在处理中请检查您的&#160;</string>
