--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -307,7 +307,7 @@
     <string name="champion_play">冠军玩法</string>
     <string name="inquire">查询</string>
     <string name="order_number">注单编号</string>
-    <string name="order_number_colon">注单编号：</string>
+    <string name="order_number_colon">注单号：</string>
     <string name="bet_type">投注玩法</string>
     <string name="total_bet_money">总投注额</string>
     <string name="total_bet_money_colon">总投注额：</string>
@@ -1210,4 +1210,8 @@
     <string name="submitting">注单提交中</string>
     <string name="bet_receipt_bet_quota_with_sign">投注金额(%s)：</string>
     <string name="bet_receipt_win_quota_with_sign">可赢金额(%s)：</string>
+
+    <string name="bet_record_single">单串</string>
+    <string name="bet_record_parlay">复式</string>
+
 </resources>
