--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1328,5 +1328,6 @@
     <string name="action_settings">Settings</string>
     <string name="register_and_login">注册/登录</string>
     <string name="live_streaming">直播</string>
-
+    <string name="bank_memory_card">储存卡</string>
+    <string name="my_bank_card">我的银行卡</string>
 </resources>
