增加注销账号页面 沉浸式布局修改 按照设计图修改UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1130,7 +1130,7 @@
 
     <string name="register_currency">Currency</string>
     <string name="register_nation">Country</string>
-    <string name="deposits">DEPOSITS</string>
+    <string name="deposits">DEPOSIT</string>
     <string name="withdraw_down">WITHDRAWAL</string>
     <string name="my_message">My message</string>
     <string name="betting_setting">Betting setting</string>
@@ -1330,4 +1330,6 @@
     <string name="live_streaming">直播</string>
     <string name="bank_memory_card">储存卡</string>
     <string name="my_bank_card">我的银行卡</string>
+    <string name="remove_account_warning">您确定要注销当前账号吗？</string>
+    <string name="cruel_write_off">残忍注销</string>
 </resources>
