--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1137,7 +1137,7 @@
     <string name="register_currency">Currency</string>
     <string name="register_nation">Country</string>
     <string name="deposits">DEPOSIT</string>
-    <string name="withdraw_down">WITHDRAWAL</string>
+    <string name="withdraw_down">WITHDRAW</string>
     <string name="my_message">My message</string>
     <string name="betting_setting">Betting setting</string>
     <string name="transaction_record">交易记录明细</string>
