--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -721,8 +721,6 @@
     <string name="spt_number_5_3">Best of 5</string>
     <string name="spt_number_5_3_vb">Best Of 5</string>
     <string name="spt_number_7_4_tt">Best Of 7</string>
-    <string name="format_plat">Best of %s</string>
-    <string name="format_round">Best of %s</string>
     <string name="bet_notify_max_limit">Can add maximum 10 options to betslip</string>
     <string name="myfavorite_notify_league_add">Added to My Competitions.</string>
     <string name="myfavorite_notify_league_remove">Remove from My Competitions.</string>
@@ -946,7 +944,7 @@
     <string name="account_hint">(your member account)</string>
     <string name="submit_success">submitted successfully</string>
     <!-- 搜尋 -->
-    <string name="text_search">Search</string>
+    <string name="text_search">Search Matches</string>
     <string name="text_clear">Clear</string>
     <string name="text_search_history">Search history</string>
     <string name="text_top_search">Top Searches</string>
@@ -1212,7 +1210,7 @@
     <string name="customer_service">如需帮助，请</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="filter">filter</string>
+    <string name="filter">筛选</string>
 
     <string name="next_step">Next</string>
     <string name="hint_select_document_type">(Valid ID Type)</string>
@@ -1233,8 +1231,8 @@
     <string name="customer_service_help">如需帮助，请联系客服</string>
     <string name="league_filter">select matches</string>
     <string name="reverse_select">reverse select</string>
-    <string name="video">video</string>
-    <string name="anime">anim</string>
+    <string name="video">Video</string>
+    <string name="anime">Animation</string>
 
     <string name="hint_bet_limit_range">Limit %1$s-%2$s</string>
     <string name="submitting">Submitting</string>
@@ -1346,5 +1344,14 @@
     <string name="download">DOWNLOAD</string>
     <string name="can_input_1_to_500_word">请描述您遇到的问题(可输入1–500字)</string>
     <string name="half">半</string>
+    <string name="skin_mode">皮肤: 日/夜间</string>
+    <string name="main_tab_home">@string/bottom_nav_home</string>
+    <string name="main_tab_sport">体育赛事</string>
+    <string name="main_tab_betlist">注单</string>
+    <string name="main_tab_favorite">收藏赛事</string>
+    <string name="main_tab_mine">@string/bottom_nav_my_account</string>
+    <string name="sport_match">场赛事</string>
+    <string name="betting">投注</string>
+    <string name="match_analyze">赛事分析</string>
 
 </resources>
