--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1194,5 +1194,6 @@
     <string name="bet_receipt_win_quota_with_sign">Số tiền có thể thắng(%s)：</string>
     <string name="bet_record_single">Singles</string>
     <string name="bet_record_parlay">Parlay</string>
+    <string name="bet_slip_id_is_copied">Bet Slip ID is copied to clipboard</string>
 
 </resources>
