--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1240,6 +1240,7 @@
     <string name="bet_receipt_win_quota_with_sign">EST winning(%s)：</string>
     <string name="bet_record_single">Singles</string>
     <string name="bet_record_parlay">Parlay</string>
+    <string name="bet_slip_id_is_copied">Bet Slip ID is copied to clipboard</string>
 
     <string name="title_activity_scrolling">ScrollingActivity</string>
     <string name="large_text">
