[Fix] OK-573【OKBET-UI-Android-Bet Slip】"Betting order no." 改成 "Betting Slip No."

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -308,7 +308,7 @@
     <string name="champion_play">Trò chơi vô địch</string>
     <string name="inquire">Kiểm tra</string>
     <string name="order_number">Mã số đặt cược</string>
-    <string name="order_number_colon">mã đặt cược</string>
+    <string name="order_number_colon">Mã đơn cược</string>
     <string name="bet_type">Cách đặt cược</string>
     <string name="total_bet_money">Tổng tiền cược</string>
     <string name="total_bet_money_colon">Tổng tiền cược</string>
