--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -558,7 +558,7 @@
     <string name="bet_info_bet_balance_insufficient">Not enough balance</string>
     <string name="bet_info_input_quota">Enter Stake</string>
     <string name="bet_info_check_maximum_limit">MAX BET</string>
-    <string name="bet_info_bet_quota">bet amount</string>
+    <string name="bet_info_bet_quota">Stake</string>
     <string name="bet_info_win_quota">To Win</string>
     <string name="bet_info_odd_content_changed">One or more options for odds, concede. Points or score has changed</string>
     <string name="bet_info_odd_content_changed2">The odds have changed</string>
