--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1212,7 +1212,7 @@
     <string name="hint_bet_limit_range">限额%1$s-%2$s</string>
     <string name="submitting">注单提交中</string>
     <string name="bet_receipt_bet_quota_with_sign">投注金额(%s)：</string>
-    <string name="bet_receipt_win_quota_with_sign">可赢金额(%s)：</string>
+    <string name="bet_receipt_win_quota_with_sign">最高可赢(%s)：</string>
     <string name="bet_record_single">单串</string>
     <string name="bet_record_parlay">复式</string>
     <string name="bet_slip_id_is_copied">下注单ID已经复制到剪贴板</string>
