--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1106,7 +1106,7 @@
 
     <!--region 20220714 新版投注單-->
     <string name="bet_win">可赢</string>
-    <string name="bet_stake">本金</string>
+    <string name="bet_stake">投注</string>
     <string name="total_capital">本金(%s)：</string>
     <string name="total_win_amount">可赢(%s)：</string>
     <string name="delete_bet">删除</string>
