--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1196,7 +1196,7 @@
     <string name="identity_two_type">ID Type [2]</string>
     <string name="hint_no_file_selected">Unselect files</string>
     <string name="upload_id_photo">Upload Photo</string>
-
+    <string name="hint_file_selected">Selected file</string>
     <string name="correct">Correct</string>
     <string name="league_filter">select matches</string>
     <string name="reverse_select">reverse select</string>
