--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1217,4 +1217,5 @@
     <string name="bet_slip_id_is_copied">下注单ID已经复制到剪贴板</string>
 
     <string name="bank_memory_card">储蓄卡</string>
+    <string name="no_more">没有更多了</string>
 </resources>
