--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -748,7 +748,7 @@
     <string name="bet_fail">Betting fails</string>
     <string name="bet_fail_btn">Bet unsuccessful</string>
     <string name="credit_record_deactivate">Credit function disabled</string>
-    <string name="game_postponed">Game postponed</string>
+    <string name="game_postponed">Match postponed</string>
     <string name="game_out">Outs:%s</string>
     <string name="money_recharge_hint1">Please transfer success before you submit deposit information.</string>
     <string name="money_recharge_hint2">Please refresh the page every time into the, get the latest payment account, avoid into your overdue account, into the wrong not compensation.</string>
@@ -1210,5 +1210,5 @@
     <string name="bet_record_single">Singles</string>
     <string name="bet_record_parlay">Parlay</string>
     <string name="bet_slip_id_is_copied">Bet Slip ID is copied to clipboard</string>
-
+    <string name="no_more">No more data to display</string>
 </resources>
