[Fix] OK-948【OKBET-UI改版-Android-体育赛事】Android端，投注成功后，提示不对

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -324,7 +324,7 @@
     <string name="end_date">结束日期</string>
     <string name="no_data">没有更多数据了</string>
     <string name="uncheck">未确认</string>
-    <string name="undone">投注成功</string>
+    <string name="undone">进行中</string>
     <string name="not_settled">未结算</string>
     <string name="settled">已结算</string>
     <string name="win">赢</string>
