修复h5测试域名

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -191,7 +191,7 @@
     <string name="fish_game">捕鱼游戏</string>
     <string name="premium_odds">特优赔率</string>
     <string name="infomation_center">信息中心</string>
-    <string name="left_menu_odds_type_setting">盘口设定</string>
+    <string name="left_menu_odds_type_setting">盘口设置</string>
     <string name="go_back_home_page">返回首页</string>
     <string name="profile_center">个人中心</string>
     <string name="member_level">会员层级</string>
