--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1265,4 +1265,5 @@
     <string name="no_search_match">没有搜索到赛事</string>
     <string name="no_more">没有更多了</string>
     <string name="reset_password">重设密码</string>
+    <string name="transact_type">Transaction Type：</string>
 </resources>
