--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -511,8 +511,8 @@
     <string name="please_setting_ewallet">โปรดตั้งค่า eWallet ก่อน</string>
     <string name="please_complete_profile_info">โปรไฟล์ที่สมบูรณ์</string>
     <string name="message_withdraw_maintain">การอัพเกรดระบบที่เกี่ยวข้องกับการถอน กรุณารอสักครู่</string>
-    <string name="withdraw_crypto_amount_hint">· จำนวนเงินที่ถอน: %s %s</string>
-    <string name="withdraw_crypto_fee_hint">· ค่าธรรมเนียมการถอน: %s %s</string>
+    <string name="withdraw_crypto_amount_hint">· จำนวนเงินที่ถอน(%2$s): %1$s</string>
+    <string name="withdraw_crypto_fee_hint">· ค่าธรรมเนียมการถอน(%2$s): %1$s</string>
     <string name="create_name">ชื่อผู้ถือบัตร</string>
     <string name="hint_please_enter_create_name">กรุณาใส่ชื่อบัตรธนาคารของคุณ</string>
     <string name="wallet_address">ที่อยู่กระเป๋าสตางค์</string>
@@ -528,7 +528,7 @@
     <string name="withdraw_amount">จำนวนเงินที่ถอน</string>
     <string name="error_withdraw_amount_bank">รูปแบบจำนวนเงินที่ถอนหรือมูลค่าไม่ถูกต้อง</string>
     <string name="error_withdraw_amount_bigger_than_balance">จำนวนถอนมากกว่ายอดเงินในบัญชี</string>
-    <string name="withdraw_handling_fee_hint">อัตราค่าธรรมเนียม: %s ค่าธรรมเนียมที่ต้องชำระ: %s %s</string>
+    <string name="withdraw_handling_fee_hint">อัตราค่าธรรมเนียม: %s ค่าธรรมเนียมที่ต้องชำระ(%s): %s</string>
     <string name="withdraw_number">จำนวนการถอน</string>
     <string name="error_withdraw_amount_crypto">รูปแบบหรือมูลค่าของจำนวนเงินที่ถอนไม่ถูกต้อง</string>
     <string name="commission_deducted_amount">จำนวนเงินที่หัก</string>
@@ -1178,5 +1178,9 @@
     <string name="anime">แอนิเมชั่น</string>
     <string name="video">วีดีโอ</string>
     <string name="reverse_select">ย้อนการเลือก</string>
+    <string name="betting">เดิมพัน</string>
+    <string name="other_bet">บันทึกการเดิมพันอื่นๆ</string>
+    <string name="sport_match">การแข่งขันในรอบ</string>
+    <string name="remove_account_warning">คุณแน่ใจไหมว่าจะลบบัญชี</string>
     <!--F005-->
 </resources>
