--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -52,7 +52,7 @@
     <string name="register_not_ph_official">Tôi không phải là quan chức chính phủ và / hoặc nhân viên có liên hệ trực tiếp với hoạt động của chính phủ Philippines hoặc bất kỳ cơ quan nào của chính phủ.</string>
     <string name="register_not_ph_school">Tôi không phải là sinh viên của bất kỳ trường học, cao đẳng hoặc đại học nào ở Philippines</string>
     <string name="register_rule_okbet">Tôi hiểu rằng nếu thông tin tôi cung cấp bị phát hiện là không chính xác, OKbet có quyền áp dụng hình phạt đối với tài khoản của tôi theo Điều khoản và Điều kiện Phần 5.1 - 5.2.</string>
-    <string name="register_rule_agree_all">Tôi đồng ý với tất cả các điều khoản và điều kiện ở trên.</string>
+    <string name="register_rule_agree_all">Tôi đồng ý với tất cả các điều khoản và thoả thuận nói trên.</string>
     <string name="register_success">Đăng ký thành công</string>
     <string name="register_jump">Trang sẽ chuyển sang %s 5 giây sau đó.</string>
     <string name="register_recharge_now">Gửi tiền ngay bây giờ</string>
@@ -212,7 +212,7 @@
     <string name="table_tennis">Bóng bàn</string>
     <string name="ice_hockey">Khúc côn cầu trên sân băng</string>
     <string name="boxing">Đấm bốc</string>
-    <string name="snooker">Bi-a</string>
+    <string name="snooker">Bida</string>
     <string name="cricket">Bóng gậy</string>
     <string name="baseball">Bóng chày</string>
     <string name="rugby_football">Bóng bầu dục</string>
@@ -505,8 +505,8 @@
     <string name="withdraw_password">Mật khẩu rút tiền</string>
     <string name="withdraw_all">TẤT CẢ CÁC</string>
     <string name="withdraw_handling_fee_hint">· Tỷ lệ phí xử lý ：%1$s%% Phí xử lý phải trả：%2$s%3$s</string>
-    <string name="withdraw_crypto_amount_hint">· Số tiền rút：%1$s%2$s</string>
-    <string name="withdraw_crypto_fee_hint">· Phí rút tiền：%1$s%2$s</string>
+    <string name="withdraw_crypto_amount_hint">· Số tiền rút(%2$s)：%1$s</string>
+    <string name="withdraw_crypto_fee_hint">· Phí rút tiền(%2$s)：%1$s</string>
     <string name="hint_four_number_password">Vui lòng nhập mật khẩu rút tiền</string>
     <string name="hint_please_enter_withdraw_password">Mật khẩu rút tiền</string>
     <string name="add_new">Thêm mới</string>
@@ -1222,4 +1222,8 @@
     <string name="anime">Animasi</string>
     <string name="video">Video</string>
     <string name="reverse_select">Đảo chọn</string>
+    <string name="betting">Đặt cược</string>
+    <string name="other_bet">Các lịch sử cá cược khác</string>
+    <string name="sport_match">Trận đấu</string>
+    <string name="remove_account_warning">Bạn có chắc chắn muốn xoá tài khoản hiện tại của mình không?</string>
 </resources>
