--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1270,4 +1270,5 @@
     <string name="total_assets">总资产</string>
 
     <string name="unbound_bank_card">您尚末绑定银行卡/eWallet</string>
+    <string name="hint_confirm_withdrawal_password">请确认提款密码</string>
 </resources>
